--- a/index.html
+++ b/index.html
@@ -375,7 +375,8 @@
                                     href="https://github.com/RazinSyakib43/New-ParentCare.git" target="_blank">Parent
                                     Care
                                 </a></h3>
-                            <p class="font-medium text-base text-secondary text-justify">A web apps that help parents find
+                            <p class="font-medium text-base text-secondary text-justify">A web apps that help parents
+                                find
                                 parenting consultations with child psychologists and gain parenting knowledge.
                             </p>
                             <div class="flex">
@@ -394,6 +395,30 @@
                     <div class="menu-card webdev mb-12 p-4 md:w-1/2">
                         <div class="bg-slate-100 rounded-xl p-6">
                             <div class="rounded-md shadow overflow-hidden">
+                                <a href="https://github.com/RazinSyakib43/MovieHub" target="_blank"> <img
+                                        src="dist/img/Portfolio/web dev/MovieHub.png"
+                                        alt="CariKuliner" style="width: 600px; border-radius: 0.375rem;"></a>
+                            </div>
+                            <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
+                                    href="https://github.com/RazinSyakib43/MovieHub" target="_blank">MovieHub
+                                </a></h3>
+                            <p class="font-medium text-base text-secondary text-justify">A web app project named
+                                'MovieHub' that showcases a curated list of movies sourced from the OMDB API. The app
+                                includes a user-friendly search feature to easily discover and explore various films.
+                            </p>
+                            <div class="flex flex-wrap">
+                                <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
+                                    <h3 class="font-medium text-white">React JS</h3>
+                                </div>
+                                <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
+                                    <h3 class="font-medium text-white">Fetch API</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu-card webdev mb-12 p-4 md:w-1/2">
+                        <div class="bg-slate-100 rounded-xl p-6">
+                            <div class="rounded-md shadow overflow-hidden">
                                 <a href="https://github.com/RazinSyakib43/CariKuliner.git" target="_blank"> <img
                                         src="https://storage.googleapis.com/razinsyakib.appspot.com/img/Portfolio/CariKuliner.png"
                                         alt="CariKuliner" style="width: 600px; border-radius: 0.375rem;"></a>
@@ -401,8 +426,10 @@
                             <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
                                     href="https://github.com/RazinSyakib43/CariKuliner.git" target="_blank">CariKuliner
                                 </a></h3>
-                            <p class="font-medium text-base text-secondary text-justify">A web app named CariKuliner,
-                                serving as a food discovery platform and offering a search feature, powered by data
+                            <p class="font-medium text-base text-secondary text-justify">A web app
+                                named CariKuliner,
+                                serving as a food discovery platform and offering a search feature,
+                                powered by data
                                 sourced from TheMealDB API.
                             </p>
                             <div class="flex flex-wrap">
@@ -495,15 +522,15 @@
                             <div class="rounded-md shadow overflow-hidden">
                                 <a
                                     href="https://www.figma.com/file/vqGDLfC6ErUmFMMigXihf9/ProtectMe-Hermes-Team?type=design&node-id=28%3A1827&mode=design&t=Y0oRqWDYbZgUY4ms-1">
-                                    <img src="dist\img\Portfolio\ui-ux/ProtectMe.png"
-                                        target="_blank" alt="HungerApps"
+                                    <img src="dist\img\Portfolio\ui-ux/ProtectMe.png" target="_blank" alt="HungerApps"
                                         style="width: 600px; border-radius: 0.375rem;"></a>
                             </div>
                             <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
                                     href="https://www.figma.com/file/vqGDLfC6ErUmFMMigXihf9/ProtectMe-Hermes-Team?type=design&node-id=28%3A1827&mode=design&t=Y0oRqWDYbZgUY4ms-1"
                                     target="_blank">ProtectMe Mobile App
                                 </a></h3>
-                            <p class="font-medium text-base text-secondary text-justify">A UI/UX Design for ProtectMe Mobile apps to protect
+                            <p class="font-medium text-base text-secondary text-justify">A UI/UX Design for ProtectMe
+                                Mobile apps to protect
                                 individuals from violence or sexual harassment by providing reporting features.
                             </p>
                             <div class="flex flex-wrap">
@@ -518,8 +545,7 @@
                             <div class="rounded-md shadow overflow-hidden">
                                 <a
                                     href="https://www.figma.com/file/irI4eN7zOfYvFTkbjclWz4/UI%2FUX-CIT-Cinemas-Website-Design?type=design&node-id=0%3A1&mode=design&t=GRJJosLC1X7dfaAL-1">
-                                    <img src="dist\img\Portfolio\ui-ux/CIT Cinemas.png"
-                                        target="_blank" alt="HungerApps"
+                                    <img src="dist\img\Portfolio\ui-ux/CIT Cinemas.png" target="_blank" alt="HungerApps"
                                         style="width: 600px; border-radius: 0.375rem;"></a>
                             </div>
                             <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
