--- a/index.html
+++ b/index.html
@@ -396,8 +396,8 @@
                         <div class="bg-slate-100 rounded-xl p-6">
                             <div class="rounded-md shadow overflow-hidden">
                                 <a href="https://github.com/RazinSyakib43/MovieHub" target="_blank"> <img
-                                        src="dist/img/Portfolio/web dev/MovieHub.png"
-                                        alt="CariKuliner" style="width: 600px; border-radius: 0.375rem;"></a>
+                                        src="dist/img/Portfolio/web dev/MovieHub.png" alt="CariKuliner"
+                                        style="width: 600px; border-radius: 0.375rem;"></a>
                             </div>
                             <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
                                     href="https://github.com/RazinSyakib43/MovieHub" target="_blank">MovieHub
@@ -511,6 +511,39 @@
                                 </div>
                                 <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
                                     <h3 class="font-medium text-white">Fetch API</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Back-End Development -->
+                    <div class="menu-card backend mb-12 p-4 md:w-1/2">
+                        <div class="bg-slate-100 rounded-xl p-6">
+                            <div class="rounded-md shadow overflow-hidden">
+                                <a
+                                    href="https://github.com/C23PR533/NutriPal-API">
+                                    <img src="dist\img\Portfolio/back-end/nutripal.png" target="_blank" alt="HungerApps"
+                                        style="width: 600px; border-radius: 0.375rem;"></a>
+                            </div>
+                            <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
+                                    href="https://github.com/C23PR533/NutriPal-API"
+                                    target="_blank">NutriPal-API
+                                </a></h3>
+                            <p class="font-medium text-base text-secondary text-justify">A RESTful-API and backend
+                                system for NutriPal
+                                Mobile apps to helps users monitor their daily calorie intake
+                            </p>
+                            <div class="flex flex-wrap">
+                                <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
+                                    <h3 class="font-medium text-white">Node.js</h3>
+                                </div>
+                                <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
+                                    <h3 class="font-medium text-white">Express.js</h3>
+                                </div>
+                                <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
+                                    <h3 class="font-medium text-white">
+                                        Google Cloud Platform
+                                    </h3>
                                 </div>
                             </div>
                         </div>
