--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                 <div class="category w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
                     <nav>
                         <div class="items">
-                            <span class="item cat-card mx-2" data-filter="all">All</span>
+                            <span class="item cat-card mx-2 active" data-filter="all">All</span>
                             <span class="item cat-card mx-2" data-filter="webdev">Web Development</span>
                             <span class="item cat-card mx-2" data-filter="backend">Back-End Development</span>
                             <span class="item cat-card mx-2" data-filter="uiux">UI/UX Design</span>
@@ -520,14 +520,12 @@
                     <div class="menu-card backend mb-12 p-4 md:w-1/2">
                         <div class="bg-slate-100 rounded-xl p-6">
                             <div class="rounded-md shadow overflow-hidden">
-                                <a
-                                    href="https://github.com/C23PR533/NutriPal-API">
+                                <a href="https://github.com/C23PR533/NutriPal-API">
                                     <img src="dist\img\Portfolio/back-end/nutripal.png" target="_blank" alt="HungerApps"
                                         style="width: 600px; border-radius: 0.375rem;"></a>
                             </div>
                             <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
-                                    href="https://github.com/C23PR533/NutriPal-API"
-                                    target="_blank">NutriPal-API
+                                    href="https://github.com/C23PR533/NutriPal-API" target="_blank">NutriPal-API
                                 </a></h3>
                             <p class="font-medium text-base text-secondary text-justify">A RESTful-API and backend
                                 system for NutriPal
@@ -544,6 +542,58 @@
                                     <h3 class="font-medium text-white">
                                         Google Cloud Platform
                                     </h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu-card backend mb-12 p-4 md:w-1/2">
+                        <div class="bg-slate-100 rounded-xl p-6">
+                            <div class="rounded-md shadow overflow-hidden">
+                                <a href="https://github.com/RazinSyakib43/Bookshelf-API-v2">
+                                    <img src="dist\img\Portfolio/back-end/Bookshelf-API.png" target="_blank"
+                                        alt="HungerApps" style="width: 600px; border-radius: 0.375rem;"></a>
+                            </div>
+                            <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
+                                    href="https://github.com/RazinSyakib43/Bookshelf-API-v2"
+                                    target="_blank">Bookshelf-API
+                                </a></h3>
+                            <p class="font-medium text-base text-secondary text-justify">A
+                                RESTful-API for the seamless management and organization of diverse book collections.
+                            </p>
+                            <div class="flex flex-wrap">
+                                <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
+                                    <h3 class="font-medium text-white">Node.js</h3>
+                                </div>
+                                <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
+                                    <h3 class="font-medium text-white">Hapi</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu-card backend mb-12 p-4 md:w-1/2">
+                        <div class="bg-slate-100 rounded-xl p-6">
+                            <div class="rounded-md shadow overflow-hidden">
+                                <a href="https://github.com/RazinSyakib43/Waifu-API">
+                                    <img src="dist\img\Portfolio/back-end/Waifu-API.png" target="_blank"
+                                        alt="HungerApps" style="width: 600px; border-radius: 0.375rem;"></a>
+                            </div>
+                            <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
+                                    href="https://github.com/RazinSyakib43/Waifu-API"
+                                    target="_blank">Waifu-API
+                                </a></h3>
+                            <p class="font-medium text-base text-secondary text-justify">A
+                                RESTful-API for manage a collection of waifus (female character in anime). Users can perform operations like
+                                retrieving all waifus, adding a new waifu, updating a waifu, and deleting a waifu.
+                            </p>
+                            <div class="flex flex-wrap">
+                                <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
+                                    <h3 class="font-medium text-white">Node.js</h3>
+                                </div>
+                                <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
+                                    <h3 class="font-medium text-white">Express.js</h3>
+                                </div>
+                                <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
+                                    <h3 class="font-medium text-white">JSON</h3>
                                 </div>
                             </div>
                         </div>
