--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
                     <!-- Website Development -->
                     <div class="menu-card webdev mb-12 p-4 md:w-1/2">
-                        <div class="bg-slate-100 rounded-xl p-6">
+                        <div class="bg-slate-100 rounded-md p-6">
                             <div class="rounded-md shadow overflow-hidden">
                                 <a href="https://kencanashop.netlify.app/" target="_blank"> <img
                                         src="https://storage.googleapis.com/razinsyakib.appspot.com/img/Portfolio/Kencana%20Shop.png"
@@ -338,7 +338,7 @@
                         </div>
                     </div>
                     <div class="menu-card webdev mb-12 p-4 md:w-1/2">
-                        <div class="bg-slate-100 rounded-xl p-6">
+                        <div class="bg-slate-100 rounded-md p-6">
                             <div class="rounded-md shadow overflow-hidden">
                                 <a href="https://github.com/RazinSyakib43/Cukurin-Aja.git" target="_blank"> <img
                                         src="https://storage.googleapis.com/razinsyakib.appspot.com/img/Portfolio/Cukurin%20Aja.png"
@@ -365,7 +365,7 @@
                         </div>
                     </div>
                     <div class="menu-card webdev mb-12 p-4 md:w-1/2">
-                        <div class="bg-slate-100 rounded-xl p-6">
+                        <div class="bg-slate-100 rounded-md p-6">
                             <div class="rounded-md shadow overflow-hidden">
                                 <a href="https://github.com/RazinSyakib43/New-ParentCare.git" target="_blank"> <img
                                         src="https://storage.googleapis.com/razinsyakib.appspot.com/img/Portfolio/Parent%20Care.png"
@@ -393,7 +393,7 @@
                         </div>
                     </div>
                     <div class="menu-card webdev mb-12 p-4 md:w-1/2">
-                        <div class="bg-slate-100 rounded-xl p-6">
+                        <div class="bg-slate-100 rounded-md p-6">
                             <div class="rounded-md shadow overflow-hidden">
                                 <a href="https://github.com/RazinSyakib43/MovieHub" target="_blank"> <img
                                         src="dist/img/Portfolio/web dev/MovieHub.png" alt="CariKuliner"
@@ -417,7 +417,7 @@
                         </div>
                     </div>
                     <div class="menu-card webdev mb-12 p-4 md:w-1/2">
-                        <div class="bg-slate-100 rounded-xl p-6">
+                        <div class="bg-slate-100 rounded-md p-6">
                             <div class="rounded-md shadow overflow-hidden">
                                 <a href="https://github.com/RazinSyakib43/CariKuliner.git" target="_blank"> <img
                                         src="https://storage.googleapis.com/razinsyakib.appspot.com/img/Portfolio/CariKuliner.png"
@@ -449,7 +449,7 @@
                         </div>
                     </div>
                     <div class="menu-card webdev mb-12 p-4 md:w-1/2">
-                        <div class="bg-slate-100 rounded-xl p-6">
+                        <div class="bg-slate-100 rounded-md p-6">
                             <div class="rounded-md shadow overflow-hidden">
                                 <a href="https://github.com/RazinSyakib43/Bookshelf-Apps" target="_blank"> <img
                                         src="https://storage.googleapis.com/razinsyakib.appspot.com/img/Portfolio/Bookshelf%20Apps.png"
@@ -477,7 +477,7 @@
                         </div>
                     </div>
                     <div class="menu-card webdev mb-12 p-4 md:w-1/2">
-                        <div class="bg-slate-100 rounded-xl p-6">
+                        <div class="bg-slate-100 rounded-md p-6">
                             <div class="rounded-md shadow overflow-hidden">
                                 <a
                                     href="https://github.com/RazinSyakib43/Restaurant-Catalogue-with-PWA-Testing-and-Web-Optimized.git">
@@ -518,7 +518,7 @@
 
                     <!-- Back-End Development -->
                     <div class="menu-card backend mb-12 p-4 md:w-1/2">
-                        <div class="bg-slate-100 rounded-xl p-6">
+                        <div class="bg-slate-100 rounded-md p-6">
                             <div class="rounded-md shadow overflow-hidden">
                                 <a href="https://github.com/C23PR533/NutriPal-API">
                                     <img src="dist\img\Portfolio/back-end/nutripal.png" target="_blank" alt="HungerApps"
@@ -547,7 +547,7 @@
                         </div>
                     </div>
                     <div class="menu-card backend mb-12 p-4 md:w-1/2">
-                        <div class="bg-slate-100 rounded-xl p-6">
+                        <div class="bg-slate-100 rounded-md p-6">
                             <div class="rounded-md shadow overflow-hidden">
                                 <a href="https://github.com/RazinSyakib43/Bookshelf-API-v2">
                                     <img src="dist\img\Portfolio/back-end/Bookshelf-API.png" target="_blank"
@@ -571,7 +571,7 @@
                         </div>
                     </div>
                     <div class="menu-card backend mb-12 p-4 md:w-1/2">
-                        <div class="bg-slate-100 rounded-xl p-6">
+                        <div class="bg-slate-100 rounded-md p-6">
                             <div class="rounded-md shadow overflow-hidden">
                                 <a href="https://github.com/RazinSyakib43/Waifu-API">
                                     <img src="dist\img\Portfolio/back-end/Waifu-API.png" target="_blank"
@@ -583,7 +583,7 @@
                                 </a></h3>
                             <p class="font-medium text-base text-secondary text-justify">A
                                 RESTful-API for manage a collection of waifus (female character in anime). Users can perform operations like
-                                retrieving all waifus, adding a new waifu, updating a waifu, and deleting a waifu.
+                                retrieving, adding, updating and deleting a waifu.
                             </p>
                             <div class="flex flex-wrap">
                                 <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
@@ -601,7 +601,7 @@
 
                     <!-- UI/UX Design -->
                     <div class="menu-card uiux mb-12 p-4 md:w-1/2">
-                        <div class="bg-slate-100 rounded-xl p-6">
+                        <div class="bg-slate-100 rounded-md p-6">
                             <div class="rounded-md shadow overflow-hidden">
                                 <a
                                     href="https://www.figma.com/file/vqGDLfC6ErUmFMMigXihf9/ProtectMe-Hermes-Team?type=design&node-id=28%3A1827&mode=design&t=Y0oRqWDYbZgUY4ms-1">
@@ -624,7 +624,7 @@
                         </div>
                     </div>
                     <div class="menu-card uiux mb-12 p-4 md:w-1/2">
-                        <div class="bg-slate-100 rounded-xl p-6">
+                        <div class="bg-slate-100 rounded-md p-6">
                             <div class="rounded-md shadow overflow-hidden">
                                 <a
                                     href="https://www.figma.com/file/irI4eN7zOfYvFTkbjclWz4/UI%2FUX-CIT-Cinemas-Website-Design?type=design&node-id=0%3A1&mode=design&t=GRJJosLC1X7dfaAL-1">
