--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </h1>
                     <h2 class="font-medium text-slate-500 text-lg mb-5">Student & <span class="text-white">Web
                             Developer</span></h2>
-                    <p class="font-medium text-slate-400 mb-10 leading-relaxed lg:text-2xl">I am a sixth-semester
+                    <p class="font-medium text-slate-400 mb-10 leading-relaxed lg:text-2xl">I am a final year
                         Informatics student who is passionate about Web Programming and interested in Cloud Computing.
                     </p>
                     <a href="https://drive.google.com/file/d/1AQT0tsOi9WBBSjRP2Lc5Qmy_jhOaUxfx/view?usp=sharing"
@@ -100,19 +100,18 @@
                 <div class="w-full px-4 mb-10 lg:w-1/2">
                     <h2 class="font-bold text-primary text-3xl mb-5 max-w-md lg:text-4xl">About Me</h2>
                     <p class="font-medium text-white text-secondary text-justify max-w-xl lg:text-lg">Hi, my name is
-                        Muhammad Razin Syakib. I'm a sixth-semester Informatics student at STMIK Sinar Nusantara with a
-                        passion for software and website development, as well as cloud computing technology. Experienced
-                        in building and managing web, RESTful API, and backend systems, and deploying applications using
-                        Google Cloud Platform. Proficient in programming languages such as JavaScript, PHP, MySQL, and
-                        Firebase. I have developed my skills in teamwork and communication with others. I am dedicated
-                        to continuous learning and exploration, always seeking opportunities to expand my knowledge and
-                        improve my skills in the tech industry.
+                        Muhammad Razin Syakib. I'm a final-year Informatics student with a passion for software and website development, as well as internship experience as a Back-End Developer at Fishku Indonesia. Experienced in building and managing web, RESTful API, and backend systems, and deploying applications. My
+experience spans diverse projects using programming languages such as JavaScript and
+TypeScript, along with technologies such as Express, Node.js, MySQL, and Google Cloud
+Platform. I am an individual with strong teamwork skills, effective communication, and a
+commitment to learning, making me a valuable asset for innovative technology projects and
+organizations.
                         During my free time, I love to read and explore new
                         technologies, try out new things in tech to build fun side projects, watch animes or movies, and
                         listen to music.</p>
                     <div class="flex items-center mt-4">
                         <!-- Twitter -->
-                        <a href="https://twitter.com/iamzeen43" target="_blank"
+                        <a href="https://twitter.com/razinsyakib_" target="_blank"
                             class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white">
                             <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -155,6 +154,16 @@
                 </div>
                 <div class="w-full px-4 lg:w-1/2">
                     <h3 class="font-semibold text-white text-2xl mb-4 lg:text-3xl lg:pt-10">Experience</h3>
+                    <div class="experience mb-2">
+                        <div class="flex">
+                            <h4 class="font-semibold text-lg text-primary mr-2">2023</h4>
+                            <p class="font-bold text-white text-secondary text-justify max-w-xl lg:text-lg">
+                                Back-End Developer Intern</p>
+                        </div>
+                        <p class="font-medium text-slate-400 text-secondary text-justify max-w-xl lg:text-md">
+                            Fishku Indonesia
+                        </p>
+                    </div>
                     <div class="experience mb-2">
                         <div class="flex">
                             <h4 class="font-semibold text-lg text-primary mr-2">2023</h4>
@@ -211,7 +220,7 @@
                     <p class="font-medium text-white text-secondary text-justify max-w-xl lg:text-lg">I am skilled in
                         creating
                         stunning web applications using HTML, CSS, Javascript, Tailwind, and Bootstrap. Additionally, I
-                        am currently deepening my expertise in back-end and API development with Node JS, PHP, Google
+                        am currently deepening my expertise in back-end and API development with Node JS, Google
                         Cloud, and
                         Firebase, as well as designing captivating user interfaces with Figma.</p>
                 </div>
@@ -377,7 +386,7 @@
                                 </a></h3>
                             <p class="font-medium text-base text-secondary text-justify">A web apps that help parents
                                 find
-                                parenting consultations with child psychologists and gain parenting knowledge.
+                                parenting consultations with child psychologists and gaining parenting knowledge.
                             </p>
                             <div class="flex">
                                 <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
@@ -403,7 +412,7 @@
                                     href="https://github.com/RazinSyakib43/MovieHub" target="_blank">MovieHub
                                 </a></h3>
                             <p class="font-medium text-base text-secondary text-justify">A web app project named
-                                'MovieHub' that showcases a curated list of movies sourced from the OMDB API. The app
+                                'MovieHub' showcases a curated list of movies sourced from the OMDB API. The app
                                 includes a user-friendly search feature to easily discover and explore various films.
                             </p>
                             <div class="flex flex-wrap">
