Updatetry to wrap button category skills

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ organizations.
                 </div>
             </div>
             <div class="flex flex-wrap">
-                <div class="category w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
+                <div class="category w-full px-4 flex flex-wrap md:flex-nowrap justify-center xl:w-10/12 xl:mx-auto">
                     <nav>
                         <div class="items">
                             <span class="item cat-card mx-2 active" data-filter="all">All</span>
