--- a/index.html
+++ b/index.html
@@ -307,10 +307,10 @@ organizations.
                 <div class="category w-full px-4 flex flex-wrap md:flex-nowrap justify-center xl:w-10/12 xl:mx-auto">
                     <nav>
                         <div class="items">
-                            <span class="item cat-card mx-2 active" data-filter="all">All</span>
-                            <span class="item cat-card mx-2" data-filter="webdev">Web Development</span>
-                            <span class="item cat-card mx-2" data-filter="backend">Back-End Development</span>
-                            <span class="item cat-card mx-2" data-filter="uiux">UI/UX Design</span>
+                            <span class="item cat-card mx-2 lg:mx-0 lg:my-2 active" data-filter="all">All</span>
+                            <span class="item cat-card mx-2 lg:mx-0 lg:my-2" data-filter="webdev">Web Development</span>
+                            <span class="item cat-card mx-2 lg:mx-0 lg:my-2" data-filter="backend">Back-End Development</span>
+                            <span class="item cat-card mx-2 lg:mx-0 lg:my-2" data-filter="uiux">UI/UX Design</span>
                         </div>
                     </nav>
                 </div>
