--- a/index.html
+++ b/index.html
@@ -100,12 +100,15 @@
                 <div class="w-full px-4 mb-10 lg:w-1/2">
                     <h2 class="font-bold text-primary text-3xl mb-5 max-w-md lg:text-4xl">About Me</h2>
                     <p class="font-medium text-white text-secondary text-justify max-w-xl lg:text-lg">Hi, my name is
-                        Muhammad Razin Syakib. I'm a final-year Informatics student with a passion for software and website development, as well as internship experience as a Back-End Developer at Fishku Indonesia. Experienced in building and managing web, RESTful API, and backend systems, and deploying applications. My
-experience spans diverse projects using programming languages such as JavaScript and
-TypeScript, along with technologies such as Express, Node.js, MySQL, and Google Cloud
-Platform. I am an individual with strong teamwork skills, effective communication, and a
-commitment to learning, making me a valuable asset for innovative technology projects and
-organizations.
+                        Muhammad Razin Syakib. I'm a final-year Informatics student with a passion for software and
+                        website development, as well as internship experience as a Back-End Developer at Fishku
+                        Indonesia. Experienced in building and managing web, RESTful API, and backend systems, and
+                        deploying applications. My
+                        experience spans diverse projects using programming languages such as JavaScript and
+                        TypeScript, along with technologies such as Express, Node.js, MySQL, and Google Cloud
+                        Platform. I am an individual with strong teamwork skills, effective communication, and a
+                        commitment to learning, making me a valuable asset for innovative technology projects and
+                        organizations.
                         During my free time, I love to read and explore new
                         technologies, try out new things in tech to build fun side projects, watch animes or movies, and
                         listen to music.</p>
@@ -243,7 +246,8 @@ organizations.
                         <div class="bg-white rounded-lg shadow-lg p-4 lg:w-1/7 md:w-1/6 xs:w-1/5" style="margin: 10px">
                             <img style="height: auto"
                                 src="https://storage.googleapis.com/razinsyakib.appspot.com/img/skills/javascript.png"
-                                alt="" srcset=""></div>
+                                alt="" srcset="">
+                        </div>
 
                         <!-- Tailwind -->
                         <div class="bg-white rounded-lg shadow-lg p-4 lg:w-1/7 md:w-1/6 xs:w-1/5" style="margin: 10px">
@@ -256,34 +260,40 @@ organizations.
                         <div class="bg-white rounded-lg shadow-lg p-4 lg:w-1/7 md:w-1/6 xs:w-1/5" style="margin: 10px">
                             <img style="height: auto"
                                 src="https://storage.googleapis.com/razinsyakib.appspot.com/img/skills/bootstrap.png"
-                                alt="" srcset=""></div>
+                                alt="" srcset="">
+                        </div>
                     </div>
                     <div class="flex flex-wrap my-4">
                         <!-- NodeJS -->
                         <div class="bg-white rounded-lg shadow-lg p-4 lg:w-1/7 md:w-1/6 xs:w-1/5" style="margin: 10px">
                             <img style="height: auto"
                                 src="https://storage.googleapis.com/razinsyakib.appspot.com/img/skills/node-js.png"
-                                alt="" srcset=""></div>
+                                alt="" srcset="">
+                        </div>
                         <!-- PHP -->
                         <div class="bg-white rounded-lg shadow-lg p-4 lg:w-1/7 md:w-1/6 xs:w-1/5" style="margin: 10px">
                             <img style="height: auto"
                                 src="https://storage.googleapis.com/razinsyakib.appspot.com/img/skills/php.png" alt=""
-                                srcset=""></div>
+                                srcset="">
+                        </div>
                         <!-- Google Cloud -->
                         <div class="bg-white rounded-lg shadow-lg p-4 lg:w-1/7 md:w-1/6 xs:w-1/5" style="margin: 10px">
                             <img style="height: auto"
                                 src="https://storage.googleapis.com/razinsyakib.appspot.com/img/skills/google-cloud.png"
-                                alt="" srcset=""></div>
+                                alt="" srcset="">
+                        </div>
                         <!-- Firebase -->
                         <div class="bg-white rounded-lg shadow-lg p-4 lg:w-1/7 md:w-1/6 xs:w-1/5" style="margin: 10px">
                             <img style="height: auto"
                                 src="https://storage.googleapis.com/razinsyakib.appspot.com/img/skills/firebase.png"
-                                alt="" srcset=""></div>
+                                alt="" srcset="">
+                        </div>
                         <!-- Figma -->
                         <div class="bg-white rounded-lg shadow-lg p-4 lg:w-1/7 md:w-1/6 xs:w-1/5" style="margin: 10px">
                             <img style="height: auto"
                                 src="https://storage.googleapis.com/razinsyakib.appspot.com/img/skills/figma.png" alt=""
-                                srcset=""></div>
+                                srcset="">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -309,7 +319,8 @@ organizations.
                         <div class="items">
                             <span class="item cat-card mx-2 lg:mx-0 lg:my-2 active" data-filter="all">All</span>
                             <span class="item cat-card mx-2 lg:mx-0 lg:my-2" data-filter="webdev">Web Development</span>
-                            <span class="item cat-card mx-2 lg:mx-0 lg:my-2" data-filter="backend">Back-End Development</span>
+                            <span class="item cat-card mx-2 lg:mx-0 lg:my-2" data-filter="backend">Back-End
+                                Development</span>
                             <span class="item cat-card mx-2 lg:mx-0 lg:my-2" data-filter="uiux">UI/UX Design</span>
                         </div>
                     </nav>
@@ -319,6 +330,35 @@ organizations.
                 <div class="gallery w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
 
                     <!-- Website Development -->
+                    <div class="menu-card webdev mb-12 p-4 md:w-1/2">
+                        <div class="bg-slate-100 rounded-md p-6">
+                            <div class="rounded-md shadow overflow-hidden">
+                                <a href="https://github.com/RazinSyakib43/Car-Management-Dashboard.git" target="_blank">
+                                    <img src="https://res.cloudinary.com/dowiubuw3/image/upload/v1757938389/car_rental_fueqi3.png"
+                                        alt="Car Rental Web" style="width: 600px; border-radius: 0.375rem;"></a>
+                            </div>
+                            <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
+                                    href="https://github.com/RazinSyakib43/Car-Management-Dashboard.git"
+                                    target="_blank">Car Rental Web
+                                </a></h3>
+                            <p class="font-medium text-base text-secondary text-justify">A full-stack web application
+                                for car rentals with a
+                                landing page, car search, user authentication, and an admin
+                                dashboard for car management (CRUD).
+                            </p>
+                            <div class="flex">
+                                <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
+                                    <h3 class="font-medium text-white">React JS</h3>
+                                </div>
+                                <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
+                                    <h3 class="font-medium text-white">Express JS</h3>
+                                </div>
+                                <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
+                                    <h3 class="font-medium text-white">PostgreSQL</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="menu-card webdev mb-12 p-4 md:w-1/2">
                         <div class="bg-slate-100 rounded-md p-6">
                             <div class="rounded-md shadow overflow-hidden">
@@ -342,33 +382,6 @@ organizations.
                                 </div>
                                 <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
                                     <h3 class="font-medium text-white">CSS</h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="menu-card webdev mb-12 p-4 md:w-1/2">
-                        <div class="bg-slate-100 rounded-md p-6">
-                            <div class="rounded-md shadow overflow-hidden">
-                                <a href="https://github.com/RazinSyakib43/Cukurin-Aja.git" target="_blank"> <img
-                                        src="https://storage.googleapis.com/razinsyakib.appspot.com/img/Portfolio/Cukurin%20Aja.png"
-                                        alt="CukurinAja" style="width: 600px; border-radius: 0.375rem;"></a>
-                            </div>
-                            <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
-                                    href="https://github.com/RazinSyakib43/Cukurin-Aja.git" target="_blank">CukurinAja
-                                </a></h3>
-                            <p class="font-medium text-base text-secondary text-justify">A web app that highlights the
-                                profile and services of CukurinAja. The platform presents in-depth information about the
-                                barbershop and its contact details.
-                            </p>
-                            <div class="flex">
-                                <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
-                                    <h3 class="font-medium text-white">HTML</h3>
-                                </div>
-                                <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
-                                    <h3 class="font-medium text-white">CSS</h3>
-                                </div>
-                                <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
-                                    <h3 class="font-medium text-white">Javascript</h3>
                                 </div>
                             </div>
                         </div>
@@ -587,11 +600,11 @@ organizations.
                                         alt="HungerApps" style="width: 600px; border-radius: 0.375rem;"></a>
                             </div>
                             <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
-                                    href="https://github.com/RazinSyakib43/Waifu-API"
-                                    target="_blank">Waifu-API
+                                    href="https://github.com/RazinSyakib43/Waifu-API" target="_blank">Waifu-API
                                 </a></h3>
                             <p class="font-medium text-base text-secondary text-justify">A
-                                RESTful-API for manage a collection of waifus (female character in anime). Users can perform operations like
+                                RESTful-API for manage a collection of waifus (female character in anime). Users can
+                                perform operations like
                                 retrieving, adding, updating and deleting a waifu.
                             </p>
                             <div class="flex flex-wrap">
