--- a/index.html
+++ b/index.html
@@ -561,6 +561,9 @@
                                     <h3 class="font-medium text-white">Express.js</h3>
                                 </div>
                                 <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
+                                    <h3 class="font-medium text-white">Firebase</h3>
+                                </div>
+                                <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
                                     <h3 class="font-medium text-white">
                                         Google Cloud Platform
                                     </h3>
